# SortingBench

./: .gitignore  API.md  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  app.py  requirements.txt
docs/: BUILD.md  CLAUDE.md  LEAD_GUIDE.md  TASK_DIVISION.md  git_guide.md  interface_contract.md
ml/: __init__.py  features.py  recommend.py  train_selector.py
sorting-bench/: SortingBench.sln  SortingBench.vcxproj  SortingBench.vcxproj.filters
sorting-bench/examples/: cli_demo.cpp  smoke_test.cpp
sorting-bench/include/: sorting_benchmark.hpp
sorting-bench/src/algorithms/: BubbleSort.cpp  BubbleSort.h  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  SelectionSort.cpp  SelectionSort.h  ShellSort.cpp  ShellSort.h  SlowSort.cpp  SlowSort.h
sorting-bench/src/benchmark/: BenchmarkConfig.h  BenchmarkDatasetResult.h  BenchmarkResult.h  BenchmarkRunner.cpp  BenchmarkRunner.h  SortStats.h
sorting-bench/src/contract/: SortCancelledException.h  Sorter.h
sorting-bench/src/data/: DataGenerator.cpp  DataGenerator.h  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  Dataset.h
sorting-bench/src/postprocess/: ReportWriter.cpp  ReportWriter.h  ResultRanker.cpp  ResultRanker.h  TrainingExport.cpp  TrainingExport.h
sorting-bench/src/pybind/: bindings.cpp
sorting-bench/src/trace/: TraceArray.h  TraceInt.cpp  TraceInt.h  TraceSession.h
